<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppointMend</string>
    <string name="title_appointments_fragment">Appointments</string>
    <string name="title_providers_fragment">Providers</string>
    <string name="title_medications_fragment">Medications</string>
    <string name="title_caregivers_fragment">Caregivers</string>
    <string name="title_activity_maps_activity_test">Maps</string>
    <string name="title_activity_home_register">Register</string>

    <string name="search_appointments">Search appointments</string>
    <string name="search_providers">Search providers</string>
    <string name="search_medications">Search medications</string>
    <string name="search_caregivers">Search caregivers</string>

    <string name="title_record_activity">Record Activity</string>

    <string name="action_note">Note</string>
    <string name="action_voice">Voice</string>
    <string name="action_photo">Photo</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_delete">Delete</string>

    <string name="search_title">Search</string>
    <string name="dummy_text">dummy text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Appointments -->
    <string name="all">All</string>
    <string name="upcoming">Upcoming</string>
    <string name="clinician">Clinician</string>

    <string name="add_appointment">+ Add Appointment</string>
    <string name="add_provider">+ Add Provider</string>
    <string name="add_medication">+ Add Medication</string>
    <string name="add_caregiver">+ Add Caregiver</string>

    <string name="sort_by">Sort by:</string>
    <!--Added by Tom 14/05/2015 -->
    <string name="appointment_questions">Questions to Ask</string>
    <string name="save_appointment">Save as Upcoming</string>
    <string name="record_appointment">Record Results</string>
    <string name="questions_per_specialist">...Select provider to see questions you should ask your doctor</string>
    <string name="appointment_add">Add Appointment</string>

    <string name="select_provider">Select Provider</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="appointment_reason">...enter reason for appointment</string>
    <string name="title_activity_add_edit_appointment">Add Appointment</string>

    <!-- End Add for 14/05/2015-->

    <string name="logout">Logout</string>


    <!-- Dummy time -->
    <string name="dummy_time">00.35</string>


    <string name="appointment_note_hint">Enter your notes here...</string>


    <!-- Record appointment -->
    <string name="record_results">Record results</string>

    <string name="title_activity_map_test">mapTest</string>

    <string name="action_settings">Settings</string>

    <!-- Register Screen-->
    <string name="new_account">New Account</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="enter_email">Enter your email</string>
    <string name="choose_password">Choose password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Retype password</string>
    <string name="passcode_desc">Passcode allows you to stay logged in and protect your information from viewing by others</string>
    <string name="choose_passcode">Choose 4-digit passcode</string>
    <string name="enter_passcode">Enter your passcode</string>
    <string name="forgot_password">Forgot Password?</string>

    <!--Voice recording -->
    <string name="time">Time:</string>
    <string name="record">Record</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="time_zero">00:00</string>



    <string name="dummy_doctor_name">Dr. T. White With a super long name</string>
    <string name="dummy_date">7 January, 2015</string>
    <string name="dummy_time_appointment">4.30 pm</string>
    <string name="begin_appointment">Begin Appointment</string>
    <string name="time_slash">/</string>
    <string name="dummy_question">What is my current activity level?</string>

    <string name="not_available">N/A</string>
    <!-- Welcome Back -->
    <string name="welcome_back">Welcome Back</string>



</resources>
