<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context="com.petrodevelopment.copdapp.activities.HomeRegisterActivity">

    <ImageView android:id="@+id/lungs_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/white_lungs"
        android:layout_gravity="center"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp" >

        <EditText android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/enter_email"
            android:layout_marginTop="8dp"/>

        <EditText android:id="@+id/enterPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_passcode"
            android:hint="@string/enter_passcode"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"/>

        <TextView android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />

        <Button android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/navy"
            android:onClick="loggedIn"
            android:layout_marginTop="70dp" />

    </LinearLayout>

</LinearLayout>
