<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petrodevelopment.copdapp.fragments.WelcomeBackFragment">

    <LinearLayout android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/welcome"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/welcome_back"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_email"
            android:layout_marginTop="8dp"/>

        <EditText android:id="@+id/enterPasscode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_passcode"
            android:hint="@string/enter_passcode"
            android:layout_marginTop="10dp"/>

        <TextView android:id="@+id/Login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/login"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="right" />

    </LinearLayout>


</FrameLayout>
