<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:clipToPadding="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".VoicePlayFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|right"
        android:layout_marginRight="@dimen/profile_image_width"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/box_top_and_bottom_padding"
            android:layout_marginRight="@dimen/box_top_and_bottom_padding"
            android:text="@string/time_zero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/box_top_and_bottom_padding"
            android:layout_marginRight="@dimen/box_top_and_bottom_padding"
            android:text="@string/time_slash" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/box_top_and_bottom_padding"
            android:layout_marginRight="@dimen/box_top_and_bottom_padding"
            android:text="@string/time_zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button"
            android:contentDescription="@string/play"
            android:src="@drawable/btn_play" />


            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressTint="@color/dark_blue"
                android:thumbTint="@color/dark_blue"
                android:layout_weight="1" />



        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button"
            android:contentDescription="@string/action_delete"
            android:src="@drawable/btn_delete_player" />

    </LinearLayout>


</RelativeLayout>